--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -12,7 +12,7 @@
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style_mahsa.css" />
     <link href="https://fonts.cdnfonts.com/css/alien-2" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/papercutz" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/zombie-control" rel="stylesheet">
