update: map layesr and plotly data gathering and changing the dataOne source

--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -78,7 +78,7 @@
     <body> <!--website header section -->
         <div>
             <div class="jumbotron" style="text-align:center">
-                <h2 id="title">UFO Sightings</h2>
+                <img src="./header.gif" height="100px">
                 <div class="gif">
                     <img id="gif" height="120" width="120"
                         src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHc0emdxd20xeW83N28xZ3NodjUzZjRkaGRnNDdxaHZnM3FiZmc3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/ygwYWMzryjq2ka87QY/giphy.gif" />
