--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -14,6 +14,7 @@
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin></script>
         <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="https://cdn.plot.ly/plotly-2.25.2.min.js" charset="utf-8"></script>
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700'
             rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="../css/style_mahsa.css" />
@@ -134,8 +135,14 @@
             </div>
         </div>
         <div id="mapme"></div> <!-- Map -->
+        <div style="text-align:center"> <!-- plotly 3d scstter plot -->
+            <div id="mahsa_plotly">
+            </div>
+        </div>
         <div style="text-align:center"> <!-- one eye gif -->
-            <img srcset="https://static.wikia.nocookie.net/freddy-fazbears-pizza/images/a/af/CyclopsAlien.gif/revision/latest/thumbnail/width/360/height/450?cb=20191209164832" height="70px">
+            <img
+                srcset="https://static.wikia.nocookie.net/freddy-fazbears-pizza/images/a/af/CyclopsAlien.gif/revision/latest/thumbnail/width/360/height/450?cb=20191209164832"
+                height="70px">
         </div>
 
         <script src="../plots/plot_Mahsa.js"></script>
