I added my name to the id and class names of the tracked by js tags in html

--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -130,11 +130,11 @@
                         encounters. Coincidence?<br /> Choose a date and
                         see for yourself.</p>
                 </div>
-                <select id="button" class="dateOptions"></select>
+                <select id="button" class="MahsaDateOptions"></select>
                 <!-- Dropdown menu -->
             </div>
         </div>
-        <div id="mapme"></div> <!-- Map -->
+        <div id="MahsaMapMe"></div> <!-- Map -->
         <div style="text-align:center"> <!-- plotly 3d scstter plot -->
             <div id="mahsa_plotly">
             </div>
