cleaning code to plot correctly

--- a/html/index_kalyn.html
+++ b/html/index_kalyn.html
@@ -122,8 +122,10 @@
                     of shapes reported on the most active date of the
                     dataset; July 4, 2010 22:00<br /> </p>
                 <div id="plot"></div>
-                <script> src="../Resources/cityshape.js"</script>
-                <script> src="../plots/plot_Kalyn.js"</script>
+                <script src="../plots/plot_Kalyn.js"></script>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
