--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -105,100 +105,109 @@
     </head>
 
     <body> <!--website header section -->
-        <div>
-            <div class="jumbotron" style="text-align:center">
-                <img src="./header.gif" height="100px">
-                <div class="gif">
-                    <img id="gif" height="120" width="120"
-                        src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHc0emdxd20xeW83N28xZ3NodjUzZjRkaGRnNDdxaHZnM3FiZmc3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/ygwYWMzryjq2ka87QY/giphy.gif" />
+        <div class="Mahsa">
+            <div>
+                <div class="jumbotron" style="text-align:center">
+                    <img src="./header.gif" height="100px">
+                    <div class="gif">
+                        <img id="gif" height="120" width="120"
+                            src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHc0emdxd20xeW83N28xZ3NodjUzZjRkaGRnNDdxaHZnM3FiZmc3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/ygwYWMzryjq2ka87QY/giphy.gif" />
+                    </div>
+                    <h3 id="header2">What are they hiding from us?</h3>
                 </div>
-                <h3 id="header2">What are they hiding from us?</h3>
             </div>
-        </div>
-        <!-- start of flying aliens -->
-        <div style="float: left; height: 200px;">
-            <div>
-                <img height=40px
-                    src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
+            <!-- start of flying aliens -->
+            <div style="float: left; height: 200px;">
+                <div>
+                    <img height=40px
+                        src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
+                </div>
+                <div>
+                    <img height=40px
+                        src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
+                </div>
+                <div">
+                    <img height=40px
+                        src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
+                </div>
             </div>
-            <div>
-                <img height=40px
-                    src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
+            <div style="float: right; height: 200px;">
+                <div>
+                    <img height=40px
+                        src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
+                </div>
+                <div>
+                    <img height=40px
+                        src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
+                </div>
+                <div">
+                    <img height=40px
+                        src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
+                </div>
             </div>
-            <div">
-                <img height=40px
-                    src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
-            </div>
-        </div>
-        <div style="float: right; height: 200px;">
-            <div>
-                <img height=40px
-                    src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
-            </div>
-            <div>
-                <img height=40px
-                    src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
-            </div>
-            <div">
-                <img height=40px
-                    src="https://media4.giphy.com/media/UvPosZsGWpzMtjukz4/giphy.gif?cid=ecf05e47r7yafnu7lsku1wnnfzadjq4qtb4adi4252v9erfc&ep=v1_gifs_related&rid=giphy.gif&ct=s" />
-            </div>
-        </div>
-        <!-- End of flying Aliens -->
-        <!--
+            <!-- End of flying Aliens -->
+            <!--
             The first plot section
         -->
-        <div id="the first plot description"> <!--Introduction -->
-            <div class="intro">
-                <div style="text-align:center">
-                    <p id="discription">After analyzing more than 80k
-                        observations on UFO sightings, there were five
-                        interesting dates.<br /> On five dates, more than ten
-                        witnesses from over two counties reported UFO
-                        encounters. Coincidence?<br /> Choose a date and
-                        see for yourself.</p>
-                </div>
-                <select id="button" class="MahsaDateOptions"></select>
-                <!-- Dropdown menu -->
-            </div>
-        </div>
-        <div id="MahsaMapMe"></div> <!-- Map -->
-        <div class="guideSmall">
-            <div style="text-align:center">
-                <p id="guideMe"> Geometric shapes can look diffrently from
-                    diffrent perspective.<br />like cube can be seen as any
-                    quadrilaterals depending on the prespective. For the sake of
-                    this analysis, we grouped all the rounded shapes like
-                    spheres, ovals, etc. in the same category and all the
-                    angular ones like square, triangles, etc. in another
-                    category. You can try rotating the cubic shape around to see
-                    how its silhouette changes based on the perspective. </p>
-                <div id="MahsaLogic1" hight="50%">
-                </div>
-            </div>
-        </div>
-        <div id="guide for 3d plotly">
-            <!--Help guide for 3d scatter plotly -->
-            <div class="guide">
-                <div style="text-align:right">
-                    <p id="guideMe">chart guide<br /> trace 0: Round shapes<br />trace
-                        1: Pointy shapes<br />trace 2: Light<br />trace 3:
-                        Other<br />----------<br />xaxis:
-                        Latitude<br />yaxis: Longitude<br />zaxis:
-                        Time(Hour)</p>
+            <div id="the first plot description"> <!--Introduction -->
+                <div class="intro">
                     <div style="text-align:center">
-                        <!-- plotly 3d scstter plot -->
-                        <div id="mahsa_plotly">
+                        <p id="discription">After analyzing more than 80k
+                            observations on UFO sightings, there were five
+                            interesting dates.<br /> On five dates, more than
+                            ten
+                            witnesses from over two counties reported UFO
+                            encounters. Coincidence?<br /> Choose a date and
+                            see for yourself.</p>
+                    </div>
+                    <select id="button" class="MahsaDateOptions"></select>
+                    <!-- Dropdown menu -->
+                </div>
+            </div>
+            <div id="MahsaMapMe"></div> <!-- Map -->
+            <div class="guideSmall">
+                <div style="text-align:center">
+                    <p id="guideMe"> Geometric shapes can look diffrently from
+                        diffrent perspective.<br />like cube can be seen as any
+                        quadrilaterals depending on the prespective. For the
+                        sake of
+                        this analysis, we grouped all the rounded shapes like
+                        spheres, ovals, etc. in the same category and all the
+                        angular ones like square, triangles, etc. in another
+                        category. You can try rotating the cubic shape around to
+                        see
+                        how its silhouette changes based on the perspective.
+                    </p>
+                    <div id="MahsaLogic1" hight="50%">
+                    </div>
+                </div>
+            </div>
+            <div id="guide for 3d plotly">
+                <!--Help guide for 3d scatter plotly -->
+                <div class="guide">
+                    <div style="text-align:right">
+                        <p id="guideMe">chart guide<br /> trace 0: Round shapes<br />trace
+                            1: Pointy shapes<br />trace 2: Light<br />trace 3:
+                            Other<br />----------<br />xaxis:
+                            Latitude<br />yaxis: Longitude<br />zaxis:
+                            Time(Hour)</p>
+                        <div style="text-align:center">
+                            <!-- plotly 3d scstter plot -->
+                            <div id="mahsa_plotly">
+                            </div>
+                        </div>
+                        <div style="text-align:left"> <!-- one eye gif -->
+                            <img
+                                srcset="https://static.wikia.nocookie.net/freddy-fazbears-pizza/images/a/af/CyclopsAlien.gif/revision/latest/thumbnail/width/360/height/450?cb=20191209164832"
+                                height="40px">
                         </div>
                     </div>
-                    <div style="text-align:left"> <!-- one eye gif -->
-                        <img
-                            srcset="https://static.wikia.nocookie.net/freddy-fazbears-pizza/images/a/af/CyclopsAlien.gif/revision/latest/thumbnail/width/360/height/450?cb=20191209164832"
-                            height="40px">
-                    </div>
                 </div>
             </div>
         </div>
+        <div class="Kalyn"></div>
+        <div class="Shree"></div>
+        <div class="Ana"></div>
 
         <script src="../plots/plot_Mahsa.js"></script>
     </body>
