--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -240,7 +240,26 @@
     </div>
 
     <div class="Shree"></div>
-    <div class="Ana"></div>
+    <div class="Ana">
+        <div id="MainAnaPlot1"> <!--Introduction -->
+            <div class="intro">
+                <div style="text-align:center">
+                    <p id="description">Countr<br /> </p>
+                    <div id="countriesChart"></div>
+
+                </div>
+            </div>
+        </div>
+        <div id="MainAnaPlot2"> <!--Introduction -->
+            <div class="intro">
+                <div style="text-align:center">
+                    <p id="description">States vs Years<br /> </p>
+                    <div id="statesChart"></div>
+
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="../plots/plot_Mahsa.js"></script>
 </body>
 
