Sree changes for project3

--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -239,14 +239,39 @@
         </div>
     </div>
 
-    <div class="Shree"></div>
+    <div class="Shree">
+        <div id="MainSreePlot1"> <!--Introduction -->
+            <div class="intro">
+                <div style="text-align:center">
+                    <p id="description">Hourly Observations<br /> </p>
+                    <div id="hourlyChart"></div>
+                </div>
+            </div>
+        </div>
+        <div id="MainSreePlot2"> <!--Introduction -->
+            <div class="intro">
+                <div style="text-align:center">
+                    <p id="description">Monthly Observations<br /> </p>
+                    <div id="monthlyChart"></div>
+                </div>
+            </div>
+        </div>
+        <div id="MainSreePlot3"> <!--Introduction -->
+            <div class="intro">
+                <div style="text-align:center">
+                    <p id="description">Yearly Observations<br /> </p>
+                    <div id="yearlyChart"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="Ana">
         <div id="MainAnaPlot1"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">Countr<br /> </p>
+                    <p id="description">Country<br /> </p>
                     <div id="countriesChart"></div>
-
                 </div>
             </div>
         </div>
