Sree changes for project3

--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -243,7 +243,9 @@
         <div id="MainSreePlot1"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">Hourly Observations<br /> </p>
+                    <p id="description">A bar plot showing the frequency
+                        of observations on hourly basis for the entire
+                        data<br /> </p>
                     <div id="hourlyChart"></div>
                 </div>
             </div>
@@ -251,7 +253,9 @@
         <div id="MainSreePlot2"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">Monthly Observations<br /> </p>
+                    <p id="description">A bar plot showing the frequency
+                        of observations on monthly basis for the entire
+                        data<br /> </p>
                     <div id="monthlyChart"></div>
                 </div>
             </div>
@@ -259,7 +263,9 @@
         <div id="MainSreePlot3"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">Yearly Observations<br /> </p>
+                    <p id="description">Chart showing the frequency
+                        of observations on Yearly basis for the entire
+                        data<br /> </p>
                     <div id="yearlyChart"></div>
                 </div>
             </div>
