gave description to each of my plots"

--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -218,9 +218,7 @@
         <div id="MainKalynPlot2"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">A bar plot showing the frequency
-                        of shapes reported on the most active date of the
-                        dataset; July 4, 2010 22:00<br /> </p>
+                    <p id="description">A line chart showing all of the sightings categorized by year<br /> </p>
                     <div id="KalynPlot2"></div>
 
                 </div>
@@ -229,9 +227,7 @@
         <div id="MainKalynPlot3"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">A bar plot showing the frequency
-                        of shapes reported on the most active date of the
-                        dataset; July 4, 2010 22:00<br /> </p>
+                    <p id="description">A grouped bar plot with historical events that may have influenced shape reports of each sighting<br /> </p>
                     <div id="KalynPlot3"></div>
 
                 </div>
