changing Ana's html header

--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -218,7 +218,9 @@
         <div id="MainKalynPlot2"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">A line chart showing all of the sightings categorized by year<br /> </p>
+                    <p id="description">A bar plot showing the frequency
+                        of shapes reported on the most active date of the
+                        dataset; July 4, 2010 22:00<br /> </p>
                     <div id="KalynPlot2"></div>
 
                 </div>
@@ -227,7 +229,9 @@
         <div id="MainKalynPlot3"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">A grouped bar plot with historical events that may have influenced shape reports of each sighting<br /> </p>
+                    <p id="description">A bar plot showing the frequency
+                        of shapes reported on the most active date of the
+                        dataset; July 4, 2010 22:00<br /> </p>
                     <div id="KalynPlot3"></div>
 
                 </div>
@@ -235,52 +239,21 @@
         </div>
     </div>
 
-    <div class="Shree">
-        <div id="MainSreePlot1"> <!--Introduction -->
-            <div class="intro">
-                <div style="text-align:center">
-                    <p id="description">A bar plot showing the frequency
-                        of observations on hourly basis for the entire
-                        data<br /> </p>
-                    <div id="hourlyChart"></div>
-                </div>
-            </div>
-        </div>
-        <div id="MainSreePlot2"> <!--Introduction -->
-            <div class="intro">
-                <div style="text-align:center">
-                    <p id="description">A bar plot showing the frequency
-                        of observations on monthly basis for the entire
-                        data<br /> </p>
-                    <div id="monthlyChart"></div>
-                </div>
-            </div>
-        </div>
-        <div id="MainSreePlot3"> <!--Introduction -->
-            <div class="intro">
-                <div style="text-align:center">
-                    <p id="description">Chart showing the frequency
-                        of observations on Yearly basis for the entire
-                        data<br /> </p>
-                    <div id="yearlyChart"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <div class="Shree"></div>
     <div class="Ana">
         <div id="MainAnaPlot1"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">Country<br /> </p>
+                    <p id="description">Visualization of UFO sightings by countries.<br /> </p>
                     <div id="countriesChart"></div>
+
                 </div>
             </div>
         </div>
         <div id="MainAnaPlot2"> <!--Introduction -->
             <div class="intro">
                 <div style="text-align:center">
-                    <p id="description">States vs Years<br /> </p>
+                    <p id="description">Timeline of sightings by states in the United States from 1910 to 2014.<br /> </p>
                     <div id="statesChart"></div>
 
                 </div>
