Sree changes - added missing divs

--- a/html/index_mahsa.html
+++ b/html/index_mahsa.html
@@ -239,7 +239,39 @@
         </div>
     </div>
 
-    <div class="Shree"></div>
+    <div class="Shree">
+        <div id="MainSreePlot1"> <!--Introduction -->
+            <div class="intro">
+                <div style="text-align:center">
+                    <p id="description">A bar plot showing the frequency
+                        of observations on hourly basis for the entire
+                        data<br /> </p>
+                    <div id="hourlyChart"></div>
+                </div>
+            </div>
+        </div>
+        <div id="MainSreePlot2"> <!--Introduction -->
+            <div class="intro">
+                <div style="text-align:center">
+                    <p id="description">A bar plot showing the frequency
+                        of observations on monthly basis for the entire
+                        data<br /> </p>
+                    <div id="monthlyChart"></div>
+                </div>
+            </div>
+        </div>
+        <div id="MainSreePlot3"> <!--Introduction -->
+            <div class="intro">
+                <div style="text-align:center">
+                    <p id="description">Chart showing the frequency
+                        of observations on Yearly basis for the entire
+                        data<br /> </p>
+                    <div id="yearlyChart"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <div class="Ana">
         <div id="MainAnaPlot1"> <!--Introduction -->
             <div class="intro">
