--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-2.25.2.min.js" charset="utf-8"></script>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../css/style_mahsa.css" />
+    <link rel="stylesheet" href="css/style_mahsa.css" />
     <link href="https://fonts.cdnfonts.com/css/alien-2" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/papercutz" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/zombie-control" rel="stylesheet">
@@ -106,7 +106,7 @@
     <div class="Mahsa">
         <div>
             <div class="jumbotron" style="text-align:center">
-                <img src="./header.gif" height="100px">
+                <img src="html/header.gif" height="100px">
                 <div class="gif">
                     <img id="gif" height="120" width="120"
                         src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHc0emdxd20xeW83N28xZ3NodjUzZjRkaGRnNDdxaHZnM3FiZmc3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/ygwYWMzryjq2ka87QY/giphy.gif" />
@@ -292,7 +292,7 @@
             </div>
         </div>
     </div>
-    <script src="../plots/plot_Mahsa.js"></script>
+    <script src="plots/plot_Mahsa.js"></script>
 </body>
 
 </html>
